--- a/src/app/shared/css/description-table.scss
+++ b/src/app/shared/css/description-table.scss
@@ -14,6 +14,8 @@
  */
 
 dl.description-table {
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+    Arial, "Lucida Grande", sans-serif;
 
   /* default size/color based on mat-header-cell */
   > dt {
