added classes to mat-tables for safety, removed margin from horizontal-scrolling

--- a/src/app/dyfi/responses/responses.component.html
+++ b/src/app/dyfi/responses/responses.component.html
@@ -8,6 +8,7 @@
 
   <div class="horizontal-scrolling">
     <mat-table matSort
+      class="responses-table"
       [dataSource]="responses"
       matSortActive="dist"
       matSortDirection="asc">
