--- a/src/app/origin/magnitude-detail/magnitude-detail.component.html
+++ b/src/app/origin/magnitude-detail/magnitude-detail.component.html
@@ -3,6 +3,7 @@
 
 <div class="horizontal-scrolling">
   <mat-table [dataSource]="dataSource"
+    class="mag-detail-table"
     matSort>
     <!-- render order is defined by columnsToDisplay -->
     <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
