--- a/src/app/shakemap/metadata/processing/processing.component.html
+++ b/src/app/shakemap/metadata/processing/processing.component.html
@@ -219,7 +219,8 @@
 
     <ng-template matExpansionPanelContent>
       <div class="horizontal-scrolling">
-        <mat-table [dataSource]="smProcessing?.roi">
+        <mat-table [dataSource]="smProcessing?.roi"
+          class="roi-table">
           <mat-header-row *matHeaderRowDef="headers?.roi"></mat-header-row>
           <mat-row *matRowDef="let myRowData; columns: headers?.roi"></mat-row>
 
