--- a/src/app/moment-tensor/axes/axes.component.html
+++ b/src/app/moment-tensor/axes/axes.component.html
@@ -1,7 +1,8 @@
 <h4>Principal Axes</h4>
 
 <div class="horizontal-scrolling">
-  <mat-table [dataSource]="getAxes(tensor)">
+  <mat-table [dataSource]="getAxes(tensor)"
+    class="axes-table">
     <!-- render order is defined by columnsToDisplay -->
     <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
     <mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></mat-row>
