--- a/src/app/shared/css/horizontal-scrolling.scss
+++ b/src/app/shared/css/horizontal-scrolling.scss
@@ -12,8 +12,6 @@
   overflow-x: auto;
 }
 
-.horizontal-scrolling > :first-child {
-  border: 1px solid blue;
+.horizontal-scrolling > mat-table {
   background: rgba(0, 0, 0, 0);
-  margin: 0;
 }
